--- a/dist-synology/build.xml
+++ b/dist-synology/build.xml
@@ -18,6 +18,7 @@
 				<filetokenizer />
 				<replacestring from="-alpha." to=".1." />
 				<replacestring from="-beta." to=".2." />
+				<replaceregex pattern="\d+\.\d+\.\d+" replace="\0.3.0"/>
 			</tokenfilter>
 		</filterchain>
 	</loadresource>
