clean up database before backup, fixes #321, v2.8.2

--- a/dist-synology/build.xml
+++ b/dist-synology/build.xml
@@ -45,6 +45,7 @@
 			</tarfileset>
 			<tarfileset dir="../dist-generic/src" username="root" group="root">
 				<include name="trenddesigns.groovy" />
+				<include name="cleanup.sql" />
 			</tarfileset>
 			<tarfileset dir="../dist-generic/src" filemode="755" username="root" group="root">
 				<include name="tool" />
