--- a/dist-ccu/build.xml
+++ b/dist-ccu/build.xml
@@ -38,6 +38,7 @@
 			</tarfileset>
 			<tarfileset dir="../dist-generic/src" prefix="ccu-historian" username="root" group="root">
 				<include name="trenddesigns.groovy" />
+				<include name="cleanup.sql" />
 			</tarfileset>
 			<tarfileset dir=".." prefix="ccu-historian" username="root" group="root">
 				<include name="LICENSE.txt" />
