updated comments in default configuration file, fixes #325

--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -49,11 +49,11 @@
 // 
 // Für jede Zentrale bzw. jedes Gerät müssen folgende zwei Optionen gesetzt werden
 // (s.a. https://github.com/mdzio/ccu-historian/wiki#konfiguration-der-angeschlossenen-ger%C3%A4te):
-// devices.device<Nr.>.type=<CCU1, CCU2 oder BINRPC> 
+// devices.device<Nr.>.type=<CCU1, CCU2, CCU3, BINRPC, XMLRPC oder CUSTOM_CCU> 
 // devices.device<Nr.>.address='<IP-Adresse>'
 //
 // Optional können noch folgende Optionen gesetzt werden:
-// devices.device<Nr.>.plugin<Nr.>.type=<CUXD oder HMWLGW>
+// devices.device<Nr.>.plugin<Nr.>.type=<HMWLGW, CUXD, JACK, BIDCOS_WIRED, BIDCOS_RF, SYSTEM, HMIP_RF>
 // devices.device<Nr.>.sysVarDataCycle=30000
 // devices.device<Nr.>.reinitTimeout=300000
 // devices.device<Nr.>.writeAccess=false
@@ -64,7 +64,8 @@
 //
 // Es muss im Folgenden mindestens eine Zentrale bzw. Gerät konfiguriert werden:
 
-// Typ der Zentrale: CCU1 oder CCU2
+// Typ der Zentrale: z.B. CCU1, CCU2, CCU3
+// (RaspberryMatic mit Funkmodul ist kompatibel zu einer CCU3.)
 devices.device1.type=<Typ>
 // IP-Adresse der Zentrale
 devices.device1.address='<IP-Adresse>'
