--- a/ccu-historian/.classpath
+++ b/ccu-historian/.classpath
@@ -27,5 +27,10 @@
 	<classpathentry kind="lib" path="/external-libs/jetty-9.4.45/jetty-xml-9.4.45.v20220203.jar"/>
 	<classpathentry kind="lib" path="/external-libs/jetty-9.4.45/servlet-api-3.1.jar"/>
 	<classpathentry kind="lib" path="/external-libs/h2-2.1.214/h2-2.1.214.jar"/>
+	<classpathentry kind="lib" path="/external-libs/cron-utils-9.2.0/cron-utils-9.2.0.jar" sourcepath="/external-libs/cron-utils-9.2.0/cron-utils-9.2.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/external-libs/cron-utils-9.2.0/cron-utils-9.2.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
