initial delay for @start tasks createBackup from script version 3.2.0

--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -28,6 +28,7 @@
 // database.pgEnable=false
 // database.pgPort=5435
 // database.pgAllowOthers=false
+// database.tasks ... (s.a. https://github.com/mdzio/ccu-historian/wiki#automatische-ausführung-von-skripten)
 // webServer.port=80
 // webServer.dir='./webapp'
 // webServer.logLevel=Level.WARNING
