--- a/ccu-historian-test/.classpath
+++ b/ccu-historian-test/.classpath
@@ -6,9 +6,10 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ccu-historian"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/mdz-utils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/hc-utils"/>
-	<classpathentry kind="lib" path="/external-libs/groovy-2.5.6/groovy-xml-2.5.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/external-libs/jetty-9.4.45/servlet-api-3.1.jar"/>
+	<classpathentry kind="lib" path="/external-libs/groovy-2.5.18/groovy-json-2.5.18.jar"/>
+	<classpathentry kind="lib" path="/external-libs/groovy-2.5.18/groovy-xml-2.5.18.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
