--- a/ccu-historian/.classpath
+++ b/ccu-historian/.classpath
@@ -32,5 +32,7 @@
 	<classpathentry kind="lib" path="/external-libs/groovy-2.5.18/groovy-sql-2.5.18.jar"/>
 	<classpathentry kind="lib" path="/external-libs/groovy-2.5.18/groovy-templates-2.5.18.jar"/>
 	<classpathentry kind="lib" path="/external-libs/groovy-2.5.18/groovy-xml-2.5.18.jar"/>
+	<classpathentry kind="lib" path="/external-libs/slf4j-1.7.36/slf4j-api-1.7.36.jar" sourcepath="/external-libs/slf4j-1.7.36/slf4j-api-1.7.36-sources.jar"/>
+	<classpathentry kind="lib" path="/external-libs/slf4j-1.7.36/slf4j-jdk14-1.7.36.jar" sourcepath="/external-libs/slf4j-1.7.36/slf4j-jdk14-1.7.36-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
