--- a/dist-ccu/src/addon/ccu-historian-sample.config
+++ b/dist-ccu/src/addon/ccu-historian-sample.config
@@ -19,3 +19,7 @@ historian.bufferTime=4*60*60*1000
 base.scriptDir='/usr/local/addons/ccu-historian/ccu-historian'
 webServer.menuLinks.link1.text='H2-HighChart'
 webServer.menuLinks.link1.address='/custom/h2-highchart/H2-HighChart.gy'
+webServer.menuLinks.link2.text='Handbuch'
+webServer.menuLinks.link2.address='https://github.com/mdzio/ccu-historian/wiki'
+webServer.menuLinks.link3.text='Fehler melden'
+webServer.menuLinks.link3.address='https://github.com/mdzio/ccu-historian/issues'
