--- a/dist-generic/src/ccu-historian-sample.config
+++ b/dist-generic/src/ccu-historian-sample.config
@@ -83,9 +83,10 @@ devices.device1.address='<IP-Adresse>'
 // devices.device1.plugin1.type=CUXD
 // devices.device1.plugin2.type=HMWLGW
 
-// Zum Freischalten der Web-Links zu den Beispiel-Web-Seiten, die Kommentarzeichen (//) vor folgenden
-// zwei Zeilen entfernen:
+// Benutzerdefinierte Verweise im Extras-Menü:
 webServer.menuLinks.link1.text='H2-HighChart'
 webServer.menuLinks.link1.address='/custom/h2-highchart/H2-HighChart.gy'
-// webServer.menuLinks.link2.text='Beispiel 1 - Vorjahresvergleich'
-// webServer.menuLinks.link2.address='/custom/example1.gy'
+webServer.menuLinks.link2.text='Handbuch'
+webServer.menuLinks.link2.address='https://github.com/mdzio/ccu-historian/wiki'
+webServer.menuLinks.link3.text='Fehler melden'
+webServer.menuLinks.link3.address='https://github.com/mdzio/ccu-historian/issues'
