--- a/hc-utils/.classpath
+++ b/hc-utils/.classpath
@@ -5,7 +5,12 @@
 	<classpathentry exported="true" kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/mdz-utils"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/external-libs/groovy-2.5.18/groovy-dateutil-2.5.18.jar"/>
 	<classpathentry kind="lib" path="/external-libs/groovy-xmlrpc-0.8/groovy-xmlrpc-0.8.jar"/>
+	<classpathentry kind="lib" path="/external-libs/cron-utils-9.2.0/cron-utils-9.2.0.jar" sourcepath="/external-libs/cron-utils-9.2.0/cron-utils-9.2.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/external-libs/cron-utils-9.2.0/cron-utils-9.2.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/external-libs/groovy-2.5.21/groovy-dateutil-2.5.21.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
