fix monit cfg, closes #422

--- a/dist-ccu/src/addon/etc/monitCCUHistorian.cfg
+++ b/dist-ccu/src/addon/etc/monitCCUHistorian.cfg
@@ -6,7 +6,7 @@ check process ccu-historian with pidfile /var/run/ccu-historian.pid
     stop = "/etc/config/rc.d/ccu-historian stop"
     restart = "/etc/config/rc.d/ccu-historian restart"
     if does not exist then
-      exec "/bin/triggerAlarm.tcl 'CCU-Historian nicht aktiv' WatchDog-Alarm"
+      exec "/bin/triggerAlarm.tcl 'CCU-Historian nicht aktiv' 'WatchDog: CCU-Historian' true"
     if failed port 8082 for 5 cycles then
-      exec "/bin/triggerAlarm.tcl 'CCU-Historian Web-Seiten nicht erreichbar' WatchDog-Alarm"
+      exec "/bin/triggerAlarm.tcl 'CCU-Historian Web-Seiten nicht erreichbar' 'WatchDog: CCU-Historian' true"
     depends on lighttpd, rfd, HMIPServer, ReGaHss
